# carnesbecerra_pedidos

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  pedidos_pendientes.glade  pedidos_pendientes.gladep
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Makefile.am  Makefile.in  Makefile~  callbacks.c  callbacks.c~  callbacks.h  interface.c  interface.h  main.c  pedidos_pendientes
